added docs for implementation API
